# nexus

./: .env.example  .gitignore  ARCHITECTURE.md  CONTEXT.md  CONTRIBUTING.md  PROGRESS.md  README.md  ROADMAP.md  SECURITY.md  alembic.ini  check_consistency.py  debug_alerts.py  docker-compose.yml  manual-agent-update.sh  nexus-core-remote.service  pyproject.toml  requirements-agent.txt  requirements-dev.txt  requirements.txt  update-agents.sh  verify_metrics_fix.py
alembic/: env.py
alembic/versions/: 20251130_1200_initial_schema.py  20251130_1300_add_logs_table.py  20251201_2049_add_services_and_deployments_tables_for_.py
docker/: Dockerfile.agent  Dockerfile.core
docs/: api.md  architecture.md  dashboard-ui-plan.md  installation.md  phase6.5-multi-disk-plan.md  security-implementation-example.md  testing_manual.md
docs/archive/: session_notes.md
docs/plans/: dashboard-ui-plan.md  phase7-docker-plan.md
docs/systemd/: nexus-agent-moria.service  nexus-agent-remote.service  nexus-agent.service  nexus-core.service
docs/tests/: 2025-12-26_environment_check-baseline.md  2025-12-26_phase16_init.md  2025-12-26_pi_fleet_audit.md  TESTING.md
nexus/: CONTEXT.md
nexus/agent/: main.py
nexus/agent/api/: __init__.py  docker.py  jobs.py  system.py  terminal.py
nexus/agent/modules/: __init__.py  shell.py  updater.py
nexus/agent/scripts/: update_agent.sh
nexus/agent/services/: docker.py  inventory.py  job_dispatcher.py  job_queue.py  logging.py  metrics.py  storage.py
nexus/agent/tests/: test_docker_service.py
nexus/cli/: __init__.py  main.py
nexus/cli/commands/: __init__.py  config.py  deployment.py  job.py  logs.py  metrics.py  node.py  service.py
nexus/core/: main.py
nexus/core/api/: __init__.py  alerts.py  auth.py  dependencies.py  deployments.py  jobs.py  logs.py  metrics.py  nodes.py  services.py  terminal.py  update.py  websocket.py
nexus/core/db/: __init__.py  crud.py  database.py  models.py
nexus/core/services/: alert_service.py  data_retention.py  health.py  log_cleanup.py  seed_templates.py  service_templates.py  websocket_manager.py
nexus/shared/: __init__.py  auth.py  config.py  models.py
nexus/web/: __init__.py  main.py
nexus/web/templates/: base.html  dashboard.html  deployments.html  jobs.html  logs.html  modules.html  nodes.html  services.html  settings.html
scripts/: backup-bywater.sh  backup-moria.sh  deep-reformat-bywater.sh  deploy-core.sh  deploy-orthanc.sh  deploy-pi.ps1  deploy-pi.sh  dev-setup.sh  install-agent.sh  install-core.sh  migrate-bywater.sh  recover-bywater.sh  reformat-bywater.sh  revert-bywater.sh  salvage-moria-db.py  setup-agent.sh  setup-core-server.sh  update-agent.sh  update-agents.sh
tests/: conftest.py
tests/core/: test_health.py
tests/integration/: test_workflow.py
tests/shared/: test_models.py
(+11 files in other folders)
